tests/fixtures/invalid/duplicate-role.nml
// Duplicate role declarations for the same name
role admin:
    label = "Admin"

role admin:
    label = "Duplicate Admin"
